examples/test/testpolicy13048.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13048
  namespace: namespace453
spec:
  podSelector:
    matchLabels:
      key35: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value13
          key30: value17
          key18: value45
      podSelector:
        matchLabels:
          key13: value16
          key1: value8
          key36: value3
